--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-amplify/auth": "^6.16.0",
     "@aws-amplify/core": "^6.13.3",
+    "@aws-amplify/ui-react": "^6.13.1",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
